# cpp_cuda_nix

./: .gitignore  CMakeLists.txt  build.sh  flake.nix  single_test.cu
examples/: Basic.cpp  Tile.cpp
include/: matrixMul.hpp  vector.hpp  version.hpp
src/: matrixMul.cu  vector.cu  version.cu
